objects/GP_Historia_transaccion__c.object
<CustomObject>
    <description>Historial de transacciones de Socio - Gestor de Puntos</description>
    <fields>
        <fullName>Fecha_transaccion__c</fullName>
        <label>Fecha transaccion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Generado_por__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Generado por</label>
        <referenceTo>GP_Regla__c</referenceTo>
        <relationshipLabel>GP Historia transacciones</relationshipLabel>
        <relationshipName>GP_Historia_transacciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_Regla_que_lo_genero__c</fullName>
        <formula>Generado_por__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de la Regla que lo genero</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nuevo_saldo__c</fullName>
        <label>Nuevo saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_orden__c</fullName>
        <label>Numero de orden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntos__c</fullName>
        <label>Puntos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saldo_a_consumir__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Saldo a consumir</label>
        <referenceTo>GP_Saldo_por_vencimiento__c</referenceTo>
        <relationshipLabel>GP Historia transacciones</relationshipLabel>
        <relationshipName>GP_Historia_transacciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saldo_anterior__c</fullName>
        <label>Saldo anterior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Socio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Socio</label>
        <referenceTo>GP_Socio__c</referenceTo>
        <relationshipLabel>GP Historia transacciones</relationshipLabel>
        <relationshipName>GP_Historia_transacciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suma_o_resta__c</fullName>
        <label>Suma o resta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suma</fullName>
                </value>
                <value>
                    <fullName>Resta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_evento__c</fullName>
        <label>Tipo de evento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>Confiabilización</fullName>
                </value>
                <value>
                    <fullName>Premio Recarga 3M</fullName>
                </value>
                <value>
                    <fullName>Castigo Recarga</fullName>
                </value>
                <value>
                    <fullName>Recarga por Monto</fullName>
                </value>
                <value>
                    <fullName>Upselling</fullName>
                </value>
                <value>
                    <fullName>Cater</fullName>
                </value>
                <value>
                    <fullName>Antigüedad</fullName>
                </value>
                <value>
                    <fullName>Alta a FOL</fullName>
                </value>
                <value>
                    <fullName>Continuidad FOL</fullName>
                </value>
                <value>
                    <fullName>Alta a Débito Automatico</fullName>
                </value>
                <value>
                    <fullName>Descarga APP</fullName>
                </value>
                <value>
                    <fullName>Alta Nuevo Servicio Core</fullName>
                </value>
                <value>
                    <fullName>Referidos</fullName>
                </value>
                <value>
                    <fullName>Convergente Fiber</fullName>
                </value>
                <value>
                    <fullName>Convergente Arnet</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Canje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vencimiento__c</fullName>
        <label>Vencimiento</label>
        <type>Date</type>
    </fields>
    <label>GP Historia transaccion</label>
    <nameField>
        <label>Historia transaccion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Historia transacciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>